update activationCode
