# src/controllers/auth.controller.ts
@@ -22,14 +22,37 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Content at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+      }
+    )
+    .test(
+      "at-least-one-number",
+      "Content at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /(?=.*[0-9])/;
+        return regex.test(value);
+      }
+    ),
   confirmPassword: Yup.string().required(),
 });
 
 export default {
-
   // function register
   async register(req: IReqUser, res: Response) {
+    /**
+     
+    #swagger.tags = ['Auth']
+     */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
 
@@ -65,6 +88,7 @@ export default {
   // function login
   async login(req: IReqUser, res: Response) {
     /**
+     #swagger.tags = ['Auth']
      #swagger.requestBody = {
      required: true,
      schema: {$ref: "#/components/schemas/loginRequest"}
@@ -77,6 +101,7 @@ export default {
 
       const userByIdentifier = await UserModel.findOne({
         $or: [{ username: identifier }, { email: identifier }],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -119,19 +144,19 @@ export default {
   // function untuk identitas kita saat login
   async me(req: IReqUser, res: Response) {
     /**
+     #swagger.tags = ['Auth']
      #swagger.security = [{
         "bearerAuth": []
     }]
      */
     try {
-      const user = req.user 
+      const user = req.user;
       const result = await UserModel.findById(user?.id);
 
       res.status(200).json({
         message: "Success get user!",
         data: result,
       });
-      
     } catch (error) {
       const err = error as unknown as Error;
       res.status(400).json({
@@ -141,4 +166,37 @@ export default {
     }
   },
 
+  async activation(req: Request, res: Response) {
+    /**
+  #swagger.tags = ['Auth']
+  #swagger.requestBody = {
+    required: true,
+    content: {
+      "application/json": {
+        schema: { $ref: "#/components/schemas/ActivationRequest" }
+      }
+    }
+  }
+*/
+
+    try {
+      const { code } = req.body as { code: string };
+      const user = await UserModel.findOneAndUpdate(
+        { activationCode: code },
+        { isActive: true },
+        { new: true }
+      );
+
+      res.status(200).json({
+        message: "Success activation",
+        data: user,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
 };
